// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList should correctly render 1`] = `
<div>
  <styled.div
    key="0"
  >
    <styled.div>
      <styled.input
        onBlur={[Function]}
        onChange={[Function]}
        value="Hi"
      />
    </styled.div>
    <styled.div>
      <styled.textarea
        onBlur={[Function]}
        onChange={[Function]}
        value="Guys"
      />
    </styled.div>
    <styled.div>
      <styled.button
        danger={true}
        onClick={[Function]}
      >
        Remove item
      </styled.button>
    </styled.div>
  </styled.div>
  <styled.div
    key="1"
  >
    <styled.div>
      <styled.input
        onBlur={[Function]}
        onChange={[Function]}
        value="Another"
      />
    </styled.div>
    <styled.div>
      <styled.textarea
        onBlur={[Function]}
        onChange={[Function]}
        value="Item"
      />
    </styled.div>
    <styled.div>
      <styled.button
        danger={true}
        onClick={[Function]}
      >
        Remove item
      </styled.button>
    </styled.div>
  </styled.div>
</div>
`;

exports[`TodoList should correctly render 2`] = `
<div>
  <div
    class="sc-bdVaJa kahNgM"
  >
    <div
      class="sc-bwzfXH mcrrz"
    >
      <input
        class="sc-htpNat HdjGh"
        value="Hi"
      />
    </div>
    <div
      class="sc-bwzfXH mcrrz"
    >
      <textarea
        class="sc-ifAKCX bLeok"
      >
        Guys
      </textarea>
    </div>
    <div
      class="sc-bwzfXH mcrrz"
    >
      <button
        class="sc-EHOje kdyGEL"
      >
        Remove item
      </button>
    </div>
  </div>
  <div
    class="sc-bdVaJa kahNgM"
  >
    <div
      class="sc-bwzfXH mcrrz"
    >
      <input
        class="sc-htpNat HdjGh"
        value="Another"
      />
    </div>
    <div
      class="sc-bwzfXH mcrrz"
    >
      <textarea
        class="sc-ifAKCX bLeok"
      >
        Item
      </textarea>
    </div>
    <div
      class="sc-bwzfXH mcrrz"
    >
      <button
        class="sc-EHOje kdyGEL"
      >
        Remove item
      </button>
    </div>
  </div>
</div>
`;

exports[`TodoList should correctly render 3`] = `
<TodoListComponent
  removeTodo={[Function]}
  todos={
    Array [
      Object {
        "description": "Guys",
        "id": 0,
        "title": "Hi",
      },
      Object {
        "description": "Item",
        "id": 1,
        "title": "Another",
      },
    ]
  }
  updateTodo={[Function]}
>
  <div>
    <styled.div
      key="0"
    >
      <div
        className="sc-bdVaJa kahNgM"
      >
        <styled.div>
          <div
            className="sc-bwzfXH mcrrz"
          >
            <styled.input
              onBlur={[Function]}
              onChange={[Function]}
              value="Hi"
            >
              <input
                className="sc-htpNat HdjGh"
                onBlur={[Function]}
                onChange={[Function]}
                value="Hi"
              />
            </styled.input>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="sc-bwzfXH mcrrz"
          >
            <styled.textarea
              onBlur={[Function]}
              onChange={[Function]}
              value="Guys"
            >
              <textarea
                className="sc-ifAKCX bLeok"
                onBlur={[Function]}
                onChange={[Function]}
                value="Guys"
              />
            </styled.textarea>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="sc-bwzfXH mcrrz"
          >
            <styled.button
              danger={true}
              onClick={[Function]}
            >
              <button
                className="sc-EHOje kdyGEL"
                onClick={[Function]}
              >
                Remove item
              </button>
            </styled.button>
          </div>
        </styled.div>
      </div>
    </styled.div>
    <styled.div
      key="1"
    >
      <div
        className="sc-bdVaJa kahNgM"
      >
        <styled.div>
          <div
            className="sc-bwzfXH mcrrz"
          >
            <styled.input
              onBlur={[Function]}
              onChange={[Function]}
              value="Another"
            >
              <input
                className="sc-htpNat HdjGh"
                onBlur={[Function]}
                onChange={[Function]}
                value="Another"
              />
            </styled.input>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="sc-bwzfXH mcrrz"
          >
            <styled.textarea
              onBlur={[Function]}
              onChange={[Function]}
              value="Item"
            >
              <textarea
                className="sc-ifAKCX bLeok"
                onBlur={[Function]}
                onChange={[Function]}
                value="Item"
              />
            </styled.textarea>
          </div>
        </styled.div>
        <styled.div>
          <div
            className="sc-bwzfXH mcrrz"
          >
            <styled.button
              danger={true}
              onClick={[Function]}
            >
              <button
                className="sc-EHOje kdyGEL"
                onClick={[Function]}
              >
                Remove item
              </button>
            </styled.button>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </div>
</TodoListComponent>
`;
